Use headsign directions for tram captures
